# flirt_signatures

./: .gitignore  LICENSE  README.md  pyproject.toml
armel/linux/: debian_10.3_libgcc.sig
armhf/linux/: debian_10.3_libcrypto.sig  debian_10.3_libdl.sig  ubuntu_2004_libc.sig
flirt_signatures/: __init__.py
flirt_signatures.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flirt_signatures/armel/linux/: ubuntu_2004_libc.sig
flirt_signatures/x86_64/linux/: ubuntu_2004_gcc_9_libstdc++.sig
x86_64/linux/: ubuntu_1804_clang++_7_libc++.sig  ubuntu_1804_clang++_7_libc++experimental.sig  ubuntu_1804_clang++_7_libc++fs.sig  ubuntu_1804_gcc_8_libstdc++.sig  ubuntu_1804_gcc_8_libstdc++fs.sig  ubuntu_1804_gcc_8_libsupc++.sig  ubuntu_2004_gcc_9_libstdc++fs.sig  ubuntu_2004_libc.sig
