[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flirt-signatures"
version = "0.1.0"
description = "FLIRT signatures for binary analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

[tool.setuptools.package-data]
flirt_signatures = ["**/*.sig", "**/*.meta"]